objects/SMAX_PS_Platform_Event_Log__c.object
<CustomObject>
    <description>Object to record history of all Platform Events sent from the system.
This object is created as a backup / failsafe in case of connectivity problems.</description>
    <label>Platform Event Log</label>
    <nameField>
        <displayFormat>PE-{0000000000}</displayFormat>
        <label>Platform Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Platform Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SMAX_PS_Action__c</fullName>
        <label>Action</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Replay_Id__c</fullName>
        <label>Replay Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Event_JSON__c</fullName>
        <label>Event JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Related_Element_Id__c</fullName>
        <externalId>true</externalId>
        <label>Related Element Identifier</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Platform_Event_Type__c</fullName>
        <label>Platform Event Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>